# libs/shared/data-access/data-access-api/src/lib/model/models.ts
@@ -1,13 +1,16 @@
 export * from './create-item-request.model';
 export * from './create-shopping-list-request.model';
+export * from './error-response.model';
 export * from './granted-authority.model';
 export * from './item.model';
 export * from './item-response.model';
 export * from './item-with-list-name-response.model';
+export * from './join-shopping-list-request.model';
 export * from './page-shopping-list-summary-response.model';
 export * from './pageable.model';
 export * from './pageable-object.model';
 export * from './problem-detail.model';
+export * from './share-token-response.model';
 export * from './shopping-list.model';
 export * from './shopping-list-response.model';
 export * from './shopping-list-share.model';
