# libs/shared/data-access/data-access-api/src/lib/model/page-shopping-list-summary-response.model.ts
@@ -1,7 +1,7 @@
 /**
  * OpenAPI definition
  *
- *
+ * 
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
  * https://openapi-generator.tech
@@ -12,7 +12,7 @@ import { SortObject } from './sort-object.model';
 import { ShoppingListSummaryResponse } from './shopping-list-summary-response.model';
 
 
-export interface PageShoppingListSummaryResponse {
+export interface PageShoppingListSummaryResponse { 
     totalElements?: number;
     totalPages?: number;
     first?: boolean;
@@ -21,8 +21,8 @@ export interface PageShoppingListSummaryResponse {
     content?: Array<ShoppingListSummaryResponse>;
     number?: number;
     sort?: SortObject;
-    pageable?: PageableObject;
     numberOfElements?: number;
+    pageable?: PageableObject;
     empty?: boolean;
 }
 
