# libs/shared/data-access/data-access-api/src/lib/model/pageable-object.model.ts
@@ -1,7 +1,7 @@
 /**
  * OpenAPI definition
  *
- *
+ * 
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
  * https://openapi-generator.tech
@@ -10,7 +10,7 @@
 import { SortObject } from './sort-object.model';
 
 
-export interface PageableObject {
+export interface PageableObject { 
     offset?: number;
     sort?: SortObject;
     paged?: boolean;
